tests/negative/gold/block2-test.gold
tests/negative/block2-test.toit:7:5: error: Unexpected block
    : print it
    ^~~~~~~~~~
tests/negative/block2-test.toit:7:5: error: List elements may not be blocks
    : print it
    ^~~~~~~~~~
Compilation failed
